// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`getTeamRoster > returns the roster for a given team for Pro cycling manager 2018 1`] = `
{
  "cyclists": [
    {
      "acceleration": 73,
      "age": -1987,
      "baroudeur": 78,
      "cobble": 72,
      "contractEndYear": null,
      "country": "CRC",
      "downhilling": 75,
      "endurance": 70,
      "firstName": "Andrey",
      "hill": 76,
      "id": 432,
      "lastName": "Amador",
      "mediumMountain": null,
      "mountain": 75,
      "overall": null,
      "plain": 73,
      "prologue": 78,
      "recuperation": 74,
      "resistance": 71,
      "sprint": 68,
      "timeTrial": 75,
      "type": null,
      "value": 0,
      "wage": null,
    },
    {
      "acceleration": 69,
      "age": -1989,
      "baroudeur": 70,
      "cobble": 53,
      "contractEndYear": null,
      "country": "COL",
      "downhilling": 64,
      "endurance": 65,
      "firstName": "Winner Andrew",
      "hill": 74,
      "id": 2693,
      "lastName": "Anacona",
      "mediumMountain": null,
      "mountain": 75,
      "overall": null,
      "plain": 67,
      "prologue": 63,
      "recuperation": 70,
      "resistance": 67,
      "sprint": 57,
      "timeTrial": 62,
      "type": null,
      "value": 0,
      "wage": null,
    },
    {
      "acceleration": 63,
      "age": -1993,
      "baroudeur": 64,
      "cobble": 61,
      "contractEndYear": null,
      "country": "ESP",
      "downhilling": 65,
      "endurance": 64,
      "firstName": "Jorge",
      "hill": 65,
      "id": 5630,
      "lastName": "Arcas",
      "mediumMountain": null,
      "mountain": 63,
      "overall": null,
      "plain": 70,
      "prologue": 71,
      "recuperation": 66,
      "resistance": 66,
      "sprint": 65,
      "timeTrial": 69,
      "type": null,
      "value": 0,
      "wage": null,
    },
    {
      "acceleration": 76,
      "age": -1992,
      "baroudeur": 67,
      "cobble": 61,
      "contractEndYear": null,
      "country": "ESP",
      "downhilling": 68,
      "endurance": 69,
      "firstName": "Carlos",
      "hill": 74,
      "id": 2596,
      "lastName": "Barbero",
      "mediumMountain": null,
      "mountain": 65,
      "overall": null,
      "plain": 73,
      "prologue": 61,
      "recuperation": 69,
      "resistance": 68,
      "sprint": 76,
      "timeTrial": 61,
      "type": null,
      "value": 0,
      "wage": null,
    },
    {
      "acceleration": 75,
      "age": -1981,
      "baroudeur": 67,
      "cobble": 71,
      "contractEndYear": null,
      "country": "ITA",
      "downhilling": 71,
      "endurance": 72,
      "firstName": "Daniele",
      "hill": 73,
      "id": 968,
      "lastName": "Bennati",
      "mediumMountain": null,
      "mountain": 63,
      "overall": null,
      "plain": 74,
      "prologue": 76,
      "recuperation": 74,
      "resistance": 72,
      "sprint": 75,
      "timeTrial": 69,
      "type": null,
      "value": 0,
      "wage": null,
    },
    {
      "acceleration": 76,
      "age": -1990,
      "baroudeur": 70,
      "cobble": 58,
      "contractEndYear": null,
      "country": "COL",
      "downhilling": 71,
      "endurance": 69,
      "firstName": "Carlos Alberto",
      "hill": 76,
      "id": 2397,
      "lastName": "Betancur",
      "mediumMountain": null,
      "mountain": 74,
      "overall": null,
      "plain": 66,
      "prologue": 68,
      "recuperation": 70,
      "resistance": 69,
      "sprint": 67,
      "timeTrial": 61,
      "type": null,
      "value": 0,
      "wage": null,
    },
    {
      "acceleration": 62,
      "age": -1995,
      "baroudeur": 69,
      "cobble": 55,
      "contractEndYear": null,
      "country": "POR",
      "downhilling": 64,
      "endurance": 63,
      "firstName": "Nuno",
      "hill": 66,
      "id": 3328,
      "lastName": "Bico",
      "mediumMountain": null,
      "mountain": 62,
      "overall": null,
      "plain": 65,
      "prologue": 61,
      "recuperation": 67,
      "resistance": 63,
      "sprint": 59,
      "timeTrial": 60,
      "type": null,
      "value": 0,
      "wage": null,
    },
    {
      "acceleration": 67,
      "age": -1994,
      "baroudeur": 66,
      "cobble": 57,
      "contractEndYear": null,
      "country": "ECU",
      "downhilling": 68,
      "endurance": 69,
      "firstName": "Richard",
      "hill": 75,
      "id": 5957,
      "lastName": "Carapaz",
      "mediumMountain": null,
      "mountain": 78,
      "overall": null,
      "plain": 68,
      "prologue": 64,
      "recuperation": 71,
      "resistance": 69,
      "sprint": 58,
      "timeTrial": 64,
      "type": null,
      "value": 0,
      "wage": null,
    },
    {
      "acceleration": 63,
      "age": -1996,
      "baroudeur": 64,
      "cobble": 62,
      "contractEndYear": null,
      "country": "ESP",
      "downhilling": 69,
      "endurance": 61,
      "firstName": "Héctor",
      "hill": 64,
      "id": 5956,
      "lastName": "Carretero",
      "mediumMountain": null,
      "mountain": 63,
      "overall": null,
      "plain": 67,
      "prologue": 66,
      "recuperation": 63,
      "resistance": 60,
      "sprint": 60,
      "timeTrial": 65,
      "type": null,
      "value": 0,
      "wage": null,
    },
    {
      "acceleration": 58,
      "age": -1997,
      "baroudeur": 64,
      "cobble": 62,
      "contractEndYear": 2019,
      "country": "ESP",
      "downhilling": 68,
      "endurance": 59,
      "firstName": "Jaime",
      "hill": 64,
      "id": 6373,
      "lastName": "Castrillo",
      "mediumMountain": null,
      "mountain": 64,
      "overall": null,
      "plain": 65,
      "prologue": 67,
      "recuperation": 64,
      "resistance": 62,
      "sprint": 57,
      "timeTrial": 67,
      "type": null,
      "value": 0,
      "wage": 0,
    },
    {
      "acceleration": 69,
      "age": -1987,
      "baroudeur": 68,
      "cobble": 57,
      "contractEndYear": null,
      "country": "ESP",
      "downhilling": 70,
      "endurance": 66,
      "firstName": "Victor",
      "hill": 72,
      "id": 2474,
      "lastName": "De La Parte",
      "mediumMountain": null,
      "mountain": 73,
      "overall": null,
      "plain": 70,
      "prologue": 73,
      "recuperation": 70,
      "resistance": 66,
      "sprint": 65,
      "timeTrial": 72,
      "type": null,
      "value": 0,
      "wage": null,
    },
    {
      "acceleration": 64,
      "age": -1984,
      "baroudeur": 81,
      "cobble": 75,
      "contractEndYear": null,
      "country": "ESP",
      "downhilling": 72,
      "endurance": 74,
      "firstName": "Imanol",
      "hill": 71,
      "id": 783,
      "lastName": "Erviti",
      "mediumMountain": null,
      "mountain": 64,
      "overall": null,
      "plain": 75,
      "prologue": 71,
      "recuperation": 62,
      "resistance": 67,
      "sprint": 61,
      "timeTrial": 68,
      "type": null,
      "value": 0,
      "wage": null,
    },
    {
      "acceleration": 67,
      "age": -1992,
      "baroudeur": 65,
      "cobble": 55,
      "contractEndYear": null,
      "country": "ESP",
      "downhilling": 67,
      "endurance": 66,
      "firstName": "Ruben",
      "hill": 76,
      "id": 3098,
      "lastName": "Fernandez",
      "mediumMountain": null,
      "mountain": 74,
      "overall": null,
      "plain": 66,
      "prologue": 65,
      "recuperation": 67,
      "resistance": 68,
      "sprint": 60,
      "timeTrial": 61,
      "type": null,
      "value": 0,
      "wage": null,
    },
    {
      "acceleration": 75,
      "age": -1990,
      "baroudeur": 71,
      "cobble": 61,
      "contractEndYear": 2019,
      "country": "ESP",
      "downhilling": 75,
      "endurance": 70,
      "firstName": "Mikel",
      "hill": 77,
      "id": 1992,
      "lastName": "Landa",
      "mediumMountain": null,
      "mountain": 82,
      "overall": null,
      "plain": 66,
      "prologue": 69,
      "recuperation": 78,
      "resistance": 76,
      "sprint": 57,
      "timeTrial": 70,
      "type": null,
      "value": 0,
      "wage": 0,
    },
    {
      "acceleration": 65,
      "age": -1990,
      "baroudeur": 73,
      "cobble": 73,
      "contractEndYear": null,
      "country": "POR",
      "downhilling": 67,
      "endurance": 70,
      "firstName": "Nelson",
      "hill": 71,
      "id": 1975,
      "lastName": "Oliveira",
      "mediumMountain": null,
      "mountain": 62,
      "overall": null,
      "plain": 74,
      "prologue": 78,
      "recuperation": 67,
      "resistance": 68,
      "sprint": 60,
      "timeTrial": 78,
      "type": null,
      "value": 0,
      "wage": null,
    },
    {
      "acceleration": 61,
      "age": -1992,
      "baroudeur": 63,
      "cobble": 54,
      "contractEndYear": null,
      "country": "ESP",
      "downhilling": 63,
      "endurance": 61,
      "firstName": "Antonio",
      "hill": 66,
      "id": 5631,
      "lastName": "Pedrero",
      "mediumMountain": null,
      "mountain": 68,
      "overall": null,
      "plain": 61,
      "prologue": 61,
      "recuperation": 64,
      "resistance": 62,
      "sprint": 55,
      "timeTrial": 59,
      "type": null,
      "value": 0,
      "wage": null,
    },
    {
      "acceleration": 77,
      "age": -1991,
      "baroudeur": 65,
      "cobble": 63,
      "contractEndYear": 2019,
      "country": "COL",
      "downhilling": 76,
      "endurance": 71,
      "firstName": "Nairo",
      "hill": 78,
      "id": 2046,
      "lastName": "Quintana",
      "mediumMountain": null,
      "mountain": 83,
      "overall": null,
      "plain": 68,
      "prologue": 73,
      "recuperation": 81,
      "resistance": 76,
      "sprint": 63,
      "timeTrial": 71,
      "type": null,
      "value": 0,
      "wage": 0,
    },
    {
      "acceleration": 68,
      "age": -1993,
      "baroudeur": 69,
      "cobble": 63,
      "contractEndYear": null,
      "country": "COL",
      "downhilling": 68,
      "endurance": 67,
      "firstName": "Dayer",
      "hill": 73,
      "id": 3383,
      "lastName": "Quintana",
      "mediumMountain": null,
      "mountain": 75,
      "overall": null,
      "plain": 66,
      "prologue": 61,
      "recuperation": 69,
      "resistance": 68,
      "sprint": 57,
      "timeTrial": 60,
      "type": null,
      "value": 0,
      "wage": null,
    },
    {
      "acceleration": 78,
      "age": -1986,
      "baroudeur": 59,
      "cobble": 67,
      "contractEndYear": null,
      "country": "ESP",
      "downhilling": 74,
      "endurance": 70,
      "firstName": "José Joaquin",
      "hill": 75,
      "id": 697,
      "lastName": "Rojas",
      "mediumMountain": null,
      "mountain": 69,
      "overall": null,
      "plain": 73,
      "prologue": 64,
      "recuperation": 72,
      "resistance": 70,
      "sprint": 75,
      "timeTrial": 61,
      "type": null,
      "value": 0,
      "wage": null,
    },
    {
      "acceleration": 68,
      "age": -1994,
      "baroudeur": 70,
      "cobble": 61,
      "contractEndYear": 2019,
      "country": "ESP",
      "downhilling": 68,
      "endurance": 67,
      "firstName": "Jaime",
      "hill": 75,
      "id": 5684,
      "lastName": "Roson",
      "mediumMountain": null,
      "mountain": 76,
      "overall": null,
      "plain": 68,
      "prologue": 62,
      "recuperation": 71,
      "resistance": 70,
      "sprint": 60,
      "timeTrial": 60,
      "type": null,
      "value": 0,
      "wage": 0,
    },
    {
      "acceleration": 69,
      "age": -1992,
      "baroudeur": 69,
      "cobble": 59,
      "contractEndYear": 2019,
      "country": "ARG",
      "downhilling": 65,
      "endurance": 64,
      "firstName": "Eduardo",
      "hill": 73,
      "id": 3056,
      "lastName": "Sepulveda",
      "mediumMountain": null,
      "mountain": 73,
      "overall": null,
      "plain": 67,
      "prologue": 68,
      "recuperation": 68,
      "resistance": 66,
      "sprint": 65,
      "timeTrial": 69,
      "type": null,
      "value": 0,
      "wage": 0,
    },
    {
      "acceleration": 66,
      "age": -1994,
      "baroudeur": 73,
      "cobble": 65,
      "contractEndYear": 2019,
      "country": "ESP",
      "downhilling": 70,
      "endurance": 70,
      "firstName": "Marc",
      "hill": 77,
      "id": 3700,
      "lastName": "Soler",
      "mediumMountain": null,
      "mountain": 78,
      "overall": null,
      "plain": 70,
      "prologue": 73,
      "recuperation": 73,
      "resistance": 72,
      "sprint": 60,
      "timeTrial": 73,
      "type": null,
      "value": 0,
      "wage": 0,
    },
    {
      "acceleration": 64,
      "age": -1993,
      "baroudeur": 71,
      "cobble": 70,
      "contractEndYear": null,
      "country": "GER",
      "downhilling": 71,
      "endurance": 66,
      "firstName": "Jasha",
      "hill": 69,
      "id": 2510,
      "lastName": "Sütterlin",
      "mediumMountain": null,
      "mountain": 60,
      "overall": null,
      "plain": 74,
      "prologue": 75,
      "recuperation": 67,
      "resistance": 66,
      "sprint": 65,
      "timeTrial": 76,
      "type": null,
      "value": 0,
      "wage": null,
    },
    {
      "acceleration": 70,
      "age": -1988,
      "baroudeur": 67,
      "cobble": 54,
      "contractEndYear": 2018,
      "country": "ESP",
      "downhilling": 72,
      "endurance": 66,
      "firstName": "Rafael",
      "hill": 76,
      "id": 1919,
      "lastName": "Valls",
      "mediumMountain": null,
      "mountain": 74,
      "overall": null,
      "plain": 67,
      "prologue": 67,
      "recuperation": 72,
      "resistance": 68,
      "sprint": 65,
      "timeTrial": 63,
      "type": null,
      "value": 0,
      "wage": 0,
    },
    {
      "acceleration": 78,
      "age": -1981,
      "baroudeur": 70,
      "cobble": 68,
      "contractEndYear": 2019,
      "country": "ESP",
      "downhilling": 75,
      "endurance": 81,
      "firstName": "Alejandro",
      "hill": 82,
      "id": 3,
      "lastName": "Valverde",
      "mediumMountain": null,
      "mountain": 78,
      "overall": null,
      "plain": 72,
      "prologue": 78,
      "recuperation": 78,
      "resistance": 80,
      "sprint": 72,
      "timeTrial": 72,
      "type": null,
      "value": 0,
      "wage": 0,
    },
  ],
  "teamId": 1,
}
`;

exports[`getTeamRoster > returns the roster for a given team for Pro cycling manager 2019 1`] = `
{
  "cyclists": [
    {
      "acceleration": 73,
      "age": -1987,
      "baroudeur": 78,
      "cobble": 72,
      "contractEndYear": 2019,
      "country": "CRC",
      "downhilling": 75,
      "endurance": 70,
      "firstName": "Andrey",
      "hill": 75,
      "id": 432,
      "lastName": "Amador",
      "mediumMountain": null,
      "mountain": 76,
      "overall": null,
      "plain": 72,
      "prologue": 78,
      "recuperation": 72,
      "resistance": 71,
      "sprint": 68,
      "timeTrial": 75,
      "type": null,
      "value": 0,
      "wage": 0,
    },
    {
      "acceleration": 70,
      "age": -1989,
      "baroudeur": 70,
      "cobble": 57,
      "contractEndYear": 2019,
      "country": "COL",
      "downhilling": 64,
      "endurance": 67,
      "firstName": "Winner Andrew",
      "hill": 73,
      "id": 2693,
      "lastName": "Anacona",
      "mediumMountain": null,
      "mountain": 74,
      "overall": null,
      "plain": 66,
      "prologue": 63,
      "recuperation": 70,
      "resistance": 68,
      "sprint": 57,
      "timeTrial": 62,
      "type": null,
      "value": 0,
      "wage": 0,
    },
    {
      "acceleration": 67,
      "age": -1993,
      "baroudeur": 64,
      "cobble": 62,
      "contractEndYear": 2019,
      "country": "ESP",
      "downhilling": 65,
      "endurance": 63,
      "firstName": "Jorge",
      "hill": 67,
      "id": 5630,
      "lastName": "Arcas",
      "mediumMountain": null,
      "mountain": 61,
      "overall": null,
      "plain": 71,
      "prologue": 71,
      "recuperation": 66,
      "resistance": 65,
      "sprint": 69,
      "timeTrial": 68,
      "type": null,
      "value": 0,
      "wage": 0,
    },
    {
      "acceleration": 76,
      "age": -1992,
      "baroudeur": 67,
      "cobble": 62,
      "contractEndYear": 2019,
      "country": "ESP",
      "downhilling": 68,
      "endurance": 70,
      "firstName": "Carlos",
      "hill": 74,
      "id": 2596,
      "lastName": "Barbero",
      "mediumMountain": null,
      "mountain": 65,
      "overall": null,
      "plain": 73,
      "prologue": 61,
      "recuperation": 69,
      "resistance": 69,
      "sprint": 76,
      "timeTrial": 61,
      "type": null,
      "value": 0,
      "wage": 0,
    },
    {
      "acceleration": 71,
      "age": -1981,
      "baroudeur": 67,
      "cobble": 71,
      "contractEndYear": 2019,
      "country": "ITA",
      "downhilling": 71,
      "endurance": 72,
      "firstName": "Daniele",
      "hill": 72,
      "id": 968,
      "lastName": "Bennati",
      "mediumMountain": null,
      "mountain": 63,
      "overall": null,
      "plain": 74,
      "prologue": 76,
      "recuperation": 74,
      "resistance": 72,
      "sprint": 72,
      "timeTrial": 69,
      "type": null,
      "value": 0,
      "wage": 0,
    },
    {
      "acceleration": 76,
      "age": -1990,
      "baroudeur": 70,
      "cobble": 60,
      "contractEndYear": 2019,
      "country": "COL",
      "downhilling": 71,
      "endurance": 69,
      "firstName": "Carlos Alberto",
      "hill": 76,
      "id": 2397,
      "lastName": "Betancur",
      "mediumMountain": null,
      "mountain": 74,
      "overall": null,
      "plain": 68,
      "prologue": 68,
      "recuperation": 70,
      "resistance": 69,
      "sprint": 67,
      "timeTrial": 61,
      "type": null,
      "value": 0,
      "wage": 0,
    },
    {
      "acceleration": 67,
      "age": -1994,
      "baroudeur": 69,
      "cobble": 59,
      "contractEndYear": 2019,
      "country": "ECU",
      "downhilling": 73,
      "endurance": 71,
      "firstName": "Richard",
      "hill": 78,
      "id": 5957,
      "lastName": "Carapaz",
      "mediumMountain": null,
      "mountain": 81,
      "overall": null,
      "plain": 71,
      "prologue": 66,
      "recuperation": 78,
      "resistance": 73,
      "sprint": 57,
      "timeTrial": 64,
      "type": null,
      "value": 0,
      "wage": 0,
    },
    {
      "acceleration": 65,
      "age": -1996,
      "baroudeur": 64,
      "cobble": 60,
      "contractEndYear": 2019,
      "country": "ESP",
      "downhilling": 69,
      "endurance": 61,
      "firstName": "Héctor",
      "hill": 69,
      "id": 5956,
      "lastName": "Carretero",
      "mediumMountain": null,
      "mountain": 66,
      "overall": null,
      "plain": 69,
      "prologue": 66,
      "recuperation": 63,
      "resistance": 60,
      "sprint": 60,
      "timeTrial": 68,
      "type": null,
      "value": 0,
      "wage": 0,
    },
    {
      "acceleration": 58,
      "age": -1997,
      "baroudeur": 64,
      "cobble": 61,
      "contractEndYear": 2019,
      "country": "ESP",
      "downhilling": 68,
      "endurance": 59,
      "firstName": "Jaime",
      "hill": 64,
      "id": 6373,
      "lastName": "Castrillo",
      "mediumMountain": null,
      "mountain": 64,
      "overall": null,
      "plain": 65,
      "prologue": 67,
      "recuperation": 64,
      "resistance": 62,
      "sprint": 57,
      "timeTrial": 67,
      "type": null,
      "value": 0,
      "wage": 0,
    },
    {
      "acceleration": 64,
      "age": -1984,
      "baroudeur": 81,
      "cobble": 74,
      "contractEndYear": 2019,
      "country": "ESP",
      "downhilling": 72,
      "endurance": 74,
      "firstName": "Imanol",
      "hill": 71,
      "id": 783,
      "lastName": "Erviti",
      "mediumMountain": null,
      "mountain": 64,
      "overall": null,
      "plain": 75,
      "prologue": 71,
      "recuperation": 62,
      "resistance": 67,
      "sprint": 61,
      "timeTrial": 68,
      "type": null,
      "value": 0,
      "wage": 0,
    },
    {
      "acceleration": 67,
      "age": -1992,
      "baroudeur": 65,
      "cobble": 58,
      "contractEndYear": 2019,
      "country": "ESP",
      "downhilling": 67,
      "endurance": 66,
      "firstName": "Ruben",
      "hill": 74,
      "id": 3098,
      "lastName": "Fernandez",
      "mediumMountain": null,
      "mountain": 72,
      "overall": null,
      "plain": 68,
      "prologue": 65,
      "recuperation": 67,
      "resistance": 68,
      "sprint": 60,
      "timeTrial": 61,
      "type": null,
      "value": 0,
      "wage": 0,
    },
    {
      "acceleration": 74,
      "age": -1990,
      "baroudeur": 75,
      "cobble": 69,
      "contractEndYear": 2019,
      "country": "ESP",
      "downhilling": 75,
      "endurance": 72,
      "firstName": "Mikel",
      "hill": 77,
      "id": 1992,
      "lastName": "Landa",
      "mediumMountain": null,
      "mountain": 82,
      "overall": null,
      "plain": 66,
      "prologue": 69,
      "recuperation": 77,
      "resistance": 73,
      "sprint": 57,
      "timeTrial": 70,
      "type": null,
      "value": 0,
      "wage": 0,
    },
    {
      "acceleration": 69,
      "age": -1990,
      "baroudeur": 82,
      "cobble": 61,
      "contractEndYear": 2019,
      "country": "ESP",
      "downhilling": 71,
      "endurance": 65,
      "firstName": "Luis",
      "hill": 70,
      "id": 2006,
      "lastName": "Mas Bonet",
      "mediumMountain": null,
      "mountain": 66,
      "overall": null,
      "plain": 73,
      "prologue": 68,
      "recuperation": 68,
      "resistance": 66,
      "sprint": 65,
      "timeTrial": 68,
      "type": null,
      "value": 0,
      "wage": 0,
    },
    {
      "acceleration": 65,
      "age": -1990,
      "baroudeur": 73,
      "cobble": 73,
      "contractEndYear": 2019,
      "country": "POR",
      "downhilling": 67,
      "endurance": 70,
      "firstName": "Nelson",
      "hill": 71,
      "id": 1975,
      "lastName": "Oliveira",
      "mediumMountain": null,
      "mountain": 62,
      "overall": null,
      "plain": 74,
      "prologue": 78,
      "recuperation": 67,
      "resistance": 68,
      "sprint": 60,
      "timeTrial": 78,
      "type": null,
      "value": 0,
      "wage": 0,
    },
    {
      "acceleration": 62,
      "age": -1992,
      "baroudeur": 63,
      "cobble": 57,
      "contractEndYear": 2019,
      "country": "ESP",
      "downhilling": 70,
      "endurance": 64,
      "firstName": "Antonio",
      "hill": 71,
      "id": 5631,
      "lastName": "Pedrero",
      "mediumMountain": null,
      "mountain": 73,
      "overall": null,
      "plain": 65,
      "prologue": 61,
      "recuperation": 68,
      "resistance": 64,
      "sprint": 59,
      "timeTrial": 63,
      "type": null,
      "value": 0,
      "wage": 0,
    },
    {
      "acceleration": 76,
      "age": -1988,
      "baroudeur": 69,
      "cobble": 63,
      "contractEndYear": 2019,
      "country": "ESP",
      "downhilling": 70,
      "endurance": 69,
      "firstName": "Eduard",
      "hill": 76,
      "id": 3169,
      "lastName": "Prades",
      "mediumMountain": null,
      "mountain": 72,
      "overall": null,
      "plain": 71,
      "prologue": 65,
      "recuperation": 67,
      "resistance": 69,
      "sprint": 68,
      "timeTrial": 64,
      "type": null,
      "value": 0,
      "wage": 0,
    },
    {
      "acceleration": 75,
      "age": -1991,
      "baroudeur": 68,
      "cobble": 69,
      "contractEndYear": 2019,
      "country": "COL",
      "downhilling": 76,
      "endurance": 70,
      "firstName": "Nairo",
      "hill": 77,
      "id": 2046,
      "lastName": "Quintana",
      "mediumMountain": null,
      "mountain": 81,
      "overall": null,
      "plain": 68,
      "prologue": 73,
      "recuperation": 79,
      "resistance": 75,
      "sprint": 63,
      "timeTrial": 71,
      "type": null,
      "value": 0,
      "wage": 0,
    },
    {
      "acceleration": 75,
      "age": -1986,
      "baroudeur": 71,
      "cobble": 78,
      "contractEndYear": 2019,
      "country": "BEL",
      "downhilling": 70,
      "endurance": 72,
      "firstName": "Jürgen",
      "hill": 73,
      "id": 711,
      "lastName": "Roelandts",
      "mediumMountain": null,
      "mountain": 63,
      "overall": null,
      "plain": 76,
      "prologue": 74,
      "recuperation": 68,
      "resistance": 73,
      "sprint": 73,
      "timeTrial": 68,
      "type": null,
      "value": 0,
      "wage": 0,
    },
    {
      "acceleration": 76,
      "age": -1986,
      "baroudeur": 59,
      "cobble": 68,
      "contractEndYear": 2019,
      "country": "ESP",
      "downhilling": 74,
      "endurance": 69,
      "firstName": "José Joaquin",
      "hill": 73,
      "id": 697,
      "lastName": "Rojas",
      "mediumMountain": null,
      "mountain": 67,
      "overall": null,
      "plain": 73,
      "prologue": 64,
      "recuperation": 69,
      "resistance": 69,
      "sprint": 74,
      "timeTrial": 61,
      "type": null,
      "value": 0,
      "wage": 0,
    },
    {
      "acceleration": 69,
      "age": -1992,
      "baroudeur": 69,
      "cobble": 60,
      "contractEndYear": 2019,
      "country": "ARG",
      "downhilling": 65,
      "endurance": 64,
      "firstName": "Eduardo",
      "hill": 73,
      "id": 3056,
      "lastName": "Sepulveda",
      "mediumMountain": null,
      "mountain": 73,
      "overall": null,
      "plain": 67,
      "prologue": 67,
      "recuperation": 68,
      "resistance": 66,
      "sprint": 65,
      "timeTrial": 68,
      "type": null,
      "value": 0,
      "wage": 0,
    },
    {
      "acceleration": 66,
      "age": -1994,
      "baroudeur": 73,
      "cobble": 65,
      "contractEndYear": 2021,
      "country": "ESP",
      "downhilling": 70,
      "endurance": 70,
      "firstName": "Marc",
      "hill": 77,
      "id": 3700,
      "lastName": "Soler",
      "mediumMountain": null,
      "mountain": 79,
      "overall": null,
      "plain": 70,
      "prologue": 73,
      "recuperation": 72,
      "resistance": 72,
      "sprint": 60,
      "timeTrial": 73,
      "type": null,
      "value": 0,
      "wage": 0,
    },
    {
      "acceleration": 64,
      "age": -1993,
      "baroudeur": 71,
      "cobble": 73,
      "contractEndYear": 2019,
      "country": "GER",
      "downhilling": 71,
      "endurance": 68,
      "firstName": "Jasha",
      "hill": 69,
      "id": 2510,
      "lastName": "Sütterlin",
      "mediumMountain": null,
      "mountain": 59,
      "overall": null,
      "plain": 74,
      "prologue": 75,
      "recuperation": 67,
      "resistance": 66,
      "sprint": 65,
      "timeTrial": 76,
      "type": null,
      "value": 0,
      "wage": 0,
    },
    {
      "acceleration": 70,
      "age": -1988,
      "baroudeur": 67,
      "cobble": 57,
      "contractEndYear": 2019,
      "country": "ESP",
      "downhilling": 72,
      "endurance": 63,
      "firstName": "Rafael",
      "hill": 73,
      "id": 1919,
      "lastName": "Valls",
      "mediumMountain": null,
      "mountain": 70,
      "overall": null,
      "plain": 66,
      "prologue": 65,
      "recuperation": 67,
      "resistance": 65,
      "sprint": 64,
      "timeTrial": 62,
      "type": null,
      "value": 0,
      "wage": 0,
    },
    {
      "acceleration": 78,
      "age": -1981,
      "baroudeur": 70,
      "cobble": 72,
      "contractEndYear": 2019,
      "country": "ESP",
      "downhilling": 75,
      "endurance": 80,
      "firstName": "Alejandro",
      "hill": 80,
      "id": 3,
      "lastName": "Valverde",
      "mediumMountain": null,
      "mountain": 79,
      "overall": null,
      "plain": 72,
      "prologue": 78,
      "recuperation": 78,
      "resistance": 79,
      "sprint": 72,
      "timeTrial": 72,
      "type": null,
      "value": 0,
      "wage": 0,
    },
    {
      "acceleration": 69,
      "age": -1993,
      "baroudeur": 73,
      "cobble": 58,
      "contractEndYear": 2020,
      "country": "ESP",
      "downhilling": 68,
      "endurance": 69,
      "firstName": "Carlos",
      "hill": 73,
      "id": 2853,
      "lastName": "Verona",
      "mediumMountain": null,
      "mountain": 74,
      "overall": null,
      "plain": 66,
      "prologue": 68,
      "recuperation": 69,
      "resistance": 70,
      "sprint": 55,
      "timeTrial": 63,
      "type": null,
      "value": 0,
      "wage": 0,
    },
  ],
  "teamId": 1,
}
`;

exports[`getTeamRoster > returns the roster for a given team for Pro cycling manager 2021 1`] = `
{
  "cyclists": [
    {
      "acceleration": 58,
      "age": -1998,
      "baroudeur": 60,
      "cobble": 58,
      "contractEndYear": 2021,
      "country": "COL",
      "downhilling": 62,
      "endurance": 60,
      "firstName": "Juan Diego",
      "hill": 65,
      "id": 7053,
      "lastName": "Alba",
      "mediumMountain": null,
      "mountain": 67,
      "overall": null,
      "plain": 61,
      "prologue": 59,
      "recuperation": 62,
      "resistance": 60,
      "sprint": 56,
      "timeTrial": 59,
      "type": null,
      "value": 0,
      "wage": 0,
    },
    {
      "acceleration": 67,
      "age": -1993,
      "baroudeur": 64,
      "cobble": 67,
      "contractEndYear": 2021,
      "country": "ESP",
      "downhilling": 65,
      "endurance": 66,
      "firstName": "Jorge",
      "hill": 71,
      "id": 5630,
      "lastName": "Arcas",
      "mediumMountain": null,
      "mountain": 65,
      "overall": null,
      "plain": 73,
      "prologue": 71,
      "recuperation": 67,
      "resistance": 65,
      "sprint": 64,
      "timeTrial": 68,
      "type": null,
      "value": 0,
      "wage": 0,
    },
    {
      "acceleration": 65,
      "age": -1996,
      "baroudeur": 72,
      "cobble": 60,
      "contractEndYear": 2021,
      "country": "ESP",
      "downhilling": 72,
      "endurance": 64,
      "firstName": "Héctor",
      "hill": 72,
      "id": 5956,
      "lastName": "Carretero",
      "mediumMountain": null,
      "mountain": 69,
      "overall": null,
      "plain": 72,
      "prologue": 66,
      "recuperation": 66,
      "resistance": 64,
      "sprint": 60,
      "timeTrial": 68,
      "type": null,
      "value": 0,
      "wage": 0,
    },
    {
      "acceleration": 63,
      "age": -1986,
      "baroudeur": 66,
      "cobble": 60,
      "contractEndYear": 2021,
      "country": "ITA",
      "downhilling": 65,
      "endurance": 68,
      "firstName": "Dario",
      "hill": 74,
      "id": 983,
      "lastName": "Cataldo",
      "mediumMountain": null,
      "mountain": 73,
      "overall": null,
      "plain": 67,
      "prologue": 71,
      "recuperation": 72,
      "resistance": 68,
      "sprint": 60,
      "timeTrial": 68,
      "type": null,
      "value": 0,
      "wage": 0,
    },
    {
      "acceleration": 72,
      "age": -1997,
      "baroudeur": 71,
      "cobble": 65,
      "contractEndYear": 2021,
      "country": "GBR",
      "downhilling": 69,
      "endurance": 65,
      "firstName": "Gabriel",
      "hill": 65,
      "id": 6296,
      "lastName": "Cullaigh",
      "mediumMountain": null,
      "mountain": 55,
      "overall": null,
      "plain": 69,
      "prologue": 63,
      "recuperation": 62,
      "resistance": 63,
      "sprint": 74,
      "timeTrial": 62,
      "type": null,
      "value": 0,
      "wage": 0,
    },
    {
      "acceleration": 61,
      "age": -1999,
      "baroudeur": 69,
      "cobble": 64,
      "contractEndYear": 2022,
      "country": "ESP",
      "downhilling": 65,
      "endurance": 62,
      "firstName": "Inigo",
      "hill": 69,
      "id": 7060,
      "lastName": "Elosegui",
      "mediumMountain": null,
      "mountain": 68,
      "overall": null,
      "plain": 67,
      "prologue": 64,
      "recuperation": 65,
      "resistance": 62,
      "sprint": 58,
      "timeTrial": 66,
      "type": null,
      "value": 0,
      "wage": 0,
    },
    {
      "acceleration": 64,
      "age": -1984,
      "baroudeur": 81,
      "cobble": 72,
      "contractEndYear": 2021,
      "country": "ESP",
      "downhilling": 72,
      "endurance": 68,
      "firstName": "Imanol",
      "hill": 68,
      "id": 783,
      "lastName": "Erviti",
      "mediumMountain": null,
      "mountain": 64,
      "overall": null,
      "plain": 75,
      "prologue": 68,
      "recuperation": 69,
      "resistance": 65,
      "sprint": 61,
      "timeTrial": 67,
      "type": null,
      "value": 0,
      "wage": 0,
    },
    {
      "acceleration": 75,
      "age": -1996,
      "baroudeur": 71,
      "cobble": 75,
      "contractEndYear": 2023,
      "country": "ESP",
      "downhilling": 70,
      "endurance": 73,
      "firstName": "Iván",
      "hill": 72,
      "id": 5106,
      "lastName": "García Cortina",
      "mediumMountain": null,
      "mountain": 62,
      "overall": null,
      "plain": 76,
      "prologue": 70,
      "recuperation": 69,
      "resistance": 72,
      "sprint": 76,
      "timeTrial": 66,
      "type": null,
      "value": 0,
      "wage": 0,
    },
    {
      "acceleration": 61,
      "age": -2001,
      "baroudeur": 68,
      "cobble": 56,
      "contractEndYear": 2023,
      "country": "PRI",
      "downhilling": 64,
      "endurance": 61,
      "firstName": "Abner",
      "hill": 69,
      "id": 7391,
      "lastName": "González",
      "mediumMountain": null,
      "mountain": 69,
      "overall": null,
      "plain": 64,
      "prologue": 62,
      "recuperation": 65,
      "resistance": 62,
      "sprint": 59,
      "timeTrial": 60,
      "type": null,
      "value": 0,
      "wage": 0,
    },
    {
      "acceleration": 58,
      "age": -2000,
      "baroudeur": 60,
      "cobble": 66,
      "contractEndYear": 2021,
      "country": "GER",
      "downhilling": 66,
      "endurance": 64,
      "firstName": "Juri",
      "hill": 65,
      "id": 6640,
      "lastName": "Hollmann",
      "mediumMountain": null,
      "mountain": 58,
      "overall": null,
      "plain": 70,
      "prologue": 69,
      "recuperation": 65,
      "resistance": 64,
      "sprint": 61,
      "timeTrial": 70,
      "type": null,
      "value": 0,
      "wage": 0,
    },
    {
      "acceleration": 64,
      "age": -1998,
      "baroudeur": 70,
      "cobble": 73,
      "contractEndYear": 2023,
      "country": "SWI",
      "downhilling": 73,
      "endurance": 67,
      "firstName": "Johan",
      "hill": 69,
      "id": 7073,
      "lastName": "Jacobs",
      "mediumMountain": null,
      "mountain": 60,
      "overall": null,
      "plain": 73,
      "prologue": 68,
      "recuperation": 64,
      "resistance": 66,
      "sprint": 61,
      "timeTrial": 67,
      "type": null,
      "value": 0,
      "wage": 0,
    },
    {
      "acceleration": 65,
      "age": -2000,
      "baroudeur": 65,
      "cobble": 67,
      "contractEndYear": 2023,
      "country": "USA",
      "downhilling": 70,
      "endurance": 67,
      "firstName": "Matteo",
      "hill": 74,
      "id": 7032,
      "lastName": "Jorgenson",
      "mediumMountain": null,
      "mountain": 72,
      "overall": null,
      "plain": 72,
      "prologue": 69,
      "recuperation": 70,
      "resistance": 67,
      "sprint": 65,
      "timeTrial": 69,
      "type": null,
      "value": 0,
      "wage": 0,
    },
    {
      "acceleration": 70,
      "age": -1995,
      "baroudeur": 67,
      "cobble": 60,
      "contractEndYear": 2021,
      "country": "COL",
      "downhilling": 64,
      "endurance": 71,
      "firstName": "Miguel Angel",
      "hill": 78,
      "id": 3705,
      "lastName": "López",
      "mediumMountain": null,
      "mountain": 80,
      "overall": null,
      "plain": 69,
      "prologue": 73,
      "recuperation": 78,
      "resistance": 74,
      "sprint": 61,
      "timeTrial": 69,
      "type": null,
      "value": 0,
      "wage": 0,
    },
    {
      "acceleration": 71,
      "age": -1996,
      "baroudeur": 71,
      "cobble": 59,
      "contractEndYear": 2022,
      "country": "ESP",
      "downhilling": 69,
      "endurance": 70,
      "firstName": "Enric",
      "hill": 77,
      "id": 5955,
      "lastName": "Mas",
      "mediumMountain": null,
      "mountain": 80,
      "overall": null,
      "plain": 69,
      "prologue": 68,
      "recuperation": 78,
      "resistance": 73,
      "sprint": 62,
      "timeTrial": 69,
      "type": null,
      "value": 0,
      "wage": 0,
    },
    {
      "acceleration": 69,
      "age": -1990,
      "baroudeur": 80,
      "cobble": 61,
      "contractEndYear": 2021,
      "country": "ESP",
      "downhilling": 71,
      "endurance": 65,
      "firstName": "Lluís",
      "hill": 70,
      "id": 2006,
      "lastName": "Mas Bonet",
      "mediumMountain": null,
      "mountain": 66,
      "overall": null,
      "plain": 73,
      "prologue": 68,
      "recuperation": 69,
      "resistance": 66,
      "sprint": 63,
      "timeTrial": 68,
      "type": null,
      "value": 0,
      "wage": 0,
    },
    {
      "acceleration": 65,
      "age": -1989,
      "baroudeur": 62,
      "cobble": 65,
      "contractEndYear": 2021,
      "country": "ESP",
      "downhilling": 68,
      "endurance": 62,
      "firstName": "Sebastián",
      "hill": 64,
      "id": 5852,
      "lastName": "Mora",
      "mediumMountain": null,
      "mountain": 57,
      "overall": null,
      "plain": 71,
      "prologue": 67,
      "recuperation": 62,
      "resistance": 65,
      "sprint": 63,
      "timeTrial": 68,
      "type": null,
      "value": 0,
      "wage": 0,
    },
    {
      "acceleration": 70,
      "age": -1995,
      "baroudeur": 72,
      "cobble": 65,
      "contractEndYear": 2023,
      "country": "AUT",
      "downhilling": 79,
      "endurance": 67,
      "firstName": "Gregor",
      "hill": 76,
      "id": 3197,
      "lastName": "Mühlberger",
      "mediumMountain": null,
      "mountain": 73,
      "overall": null,
      "plain": 69,
      "prologue": 68,
      "recuperation": 67,
      "resistance": 67,
      "sprint": 66,
      "timeTrial": 65,
      "type": null,
      "value": 0,
      "wage": 0,
    },
    {
      "acceleration": 60,
      "age": -1998,
      "baroudeur": 65,
      "cobble": 62,
      "contractEndYear": 2021,
      "country": "DEN",
      "downhilling": 63,
      "endurance": 62,
      "firstName": "Mathias",
      "hill": 66,
      "id": 6584,
      "lastName": "Norsgaard",
      "mediumMountain": null,
      "mountain": 58,
      "overall": null,
      "plain": 70,
      "prologue": 68,
      "recuperation": 60,
      "resistance": 63,
      "sprint": 61,
      "timeTrial": 69,
      "type": null,
      "value": 0,
      "wage": 0,
    },
    {
      "acceleration": 65,
      "age": -1990,
      "baroudeur": 70,
      "cobble": 72,
      "contractEndYear": 2021,
      "country": "POR",
      "downhilling": 67,
      "endurance": 66,
      "firstName": "Nelson",
      "hill": 73,
      "id": 1975,
      "lastName": "Oliveira",
      "mediumMountain": null,
      "mountain": 70,
      "overall": null,
      "plain": 75,
      "prologue": 76,
      "recuperation": 68,
      "resistance": 69,
      "sprint": 58,
      "timeTrial": 78,
      "type": null,
      "value": 0,
      "wage": 0,
    },
    {
      "acceleration": 66,
      "age": -1992,
      "baroudeur": 63,
      "cobble": 57,
      "contractEndYear": 2021,
      "country": "ESP",
      "downhilling": 70,
      "endurance": 67,
      "firstName": "Antonio",
      "hill": 73,
      "id": 5631,
      "lastName": "Pedrero",
      "mediumMountain": null,
      "mountain": 76,
      "overall": null,
      "plain": 67,
      "prologue": 63,
      "recuperation": 69,
      "resistance": 67,
      "sprint": 59,
      "timeTrial": 65,
      "type": null,
      "value": 0,
      "wage": 0,
    },
    {
      "acceleration": 72,
      "age": -1986,
      "baroudeur": 59,
      "cobble": 68,
      "contractEndYear": 2021,
      "country": "ESP",
      "downhilling": 74,
      "endurance": 69,
      "firstName": "José Joaquin",
      "hill": 73,
      "id": 697,
      "lastName": "Rojas",
      "mediumMountain": null,
      "mountain": 69,
      "overall": null,
      "plain": 73,
      "prologue": 64,
      "recuperation": 70,
      "resistance": 69,
      "sprint": 69,
      "timeTrial": 64,
      "type": null,
      "value": 0,
      "wage": 0,
    },
    {
      "acceleration": 63,
      "age": -1999,
      "baroudeur": 67,
      "cobble": 59,
      "contractEndYear": 2021,
      "country": "COL",
      "downhilling": 65,
      "endurance": 64,
      "firstName": "Einer",
      "hill": 73,
      "id": 7064,
      "lastName": "Rubio",
      "mediumMountain": null,
      "mountain": 75,
      "overall": null,
      "plain": 64,
      "prologue": 58,
      "recuperation": 68,
      "resistance": 66,
      "sprint": 58,
      "timeTrial": 58,
      "type": null,
      "value": 0,
      "wage": 0,
    },
    {
      "acceleration": 63,
      "age": -1996,
      "baroudeur": 67,
      "cobble": 62,
      "contractEndYear": 2021,
      "country": "ESP",
      "downhilling": 69,
      "endurance": 66,
      "firstName": "Sergio",
      "hill": 71,
      "id": 6417,
      "lastName": "Samitier",
      "mediumMountain": null,
      "mountain": 74,
      "overall": null,
      "plain": 69,
      "prologue": 67,
      "recuperation": 71,
      "resistance": 66,
      "sprint": 61,
      "timeTrial": 66,
      "type": null,
      "value": 0,
      "wage": 0,
    },
    {
      "acceleration": 76,
      "age": -1995,
      "baroudeur": 75,
      "cobble": 71,
      "contractEndYear": 2022,
      "country": "ESP",
      "downhilling": 68,
      "endurance": 67,
      "firstName": "Gonzalo",
      "hill": 74,
      "id": 6407,
      "lastName": "Serrano",
      "mediumMountain": null,
      "mountain": 66,
      "overall": null,
      "plain": 72,
      "prologue": 65,
      "recuperation": 68,
      "resistance": 67,
      "sprint": 68,
      "timeTrial": 65,
      "type": null,
      "value": 0,
      "wage": 0,
    },
    {
      "acceleration": 66,
      "age": -1994,
      "baroudeur": 74,
      "cobble": 65,
      "contractEndYear": 2021,
      "country": "ESP",
      "downhilling": 70,
      "endurance": 70,
      "firstName": "Marc",
      "hill": 76,
      "id": 3700,
      "lastName": "Soler",
      "mediumMountain": null,
      "mountain": 77,
      "overall": null,
      "plain": 74,
      "prologue": 73,
      "recuperation": 72,
      "resistance": 71,
      "sprint": 60,
      "timeTrial": 73,
      "type": null,
      "value": 0,
      "wage": 0,
    },
    {
      "acceleration": 69,
      "age": -1991,
      "baroudeur": 61,
      "cobble": 64,
      "contractEndYear": 2021,
      "country": "ESP",
      "downhilling": 69,
      "endurance": 65,
      "firstName": "Albert",
      "hill": 66,
      "id": 5844,
      "lastName": "Torres",
      "mediumMountain": null,
      "mountain": 57,
      "overall": null,
      "plain": 72,
      "prologue": 68,
      "recuperation": 68,
      "resistance": 66,
      "sprint": 71,
      "timeTrial": 61,
      "type": null,
      "value": 0,
      "wage": 0,
    },
    {
      "acceleration": 72,
      "age": -1981,
      "baroudeur": 70,
      "cobble": 70,
      "contractEndYear": 2021,
      "country": "ESP",
      "downhilling": 75,
      "endurance": 74,
      "firstName": "Alejandro",
      "hill": 80,
      "id": 3,
      "lastName": "Valverde",
      "mediumMountain": null,
      "mountain": 76,
      "overall": null,
      "plain": 70,
      "prologue": 73,
      "recuperation": 73,
      "resistance": 74,
      "sprint": 67,
      "timeTrial": 72,
      "type": null,
      "value": 0,
      "wage": 0,
    },
    {
      "acceleration": 69,
      "age": -1993,
      "baroudeur": 73,
      "cobble": 58,
      "contractEndYear": 2021,
      "country": "ESP",
      "downhilling": 68,
      "endurance": 68,
      "firstName": "Carlos",
      "hill": 72,
      "id": 2853,
      "lastName": "Verona",
      "mediumMountain": null,
      "mountain": 73,
      "overall": null,
      "plain": 66,
      "prologue": 68,
      "recuperation": 69,
      "resistance": 69,
      "sprint": 55,
      "timeTrial": 63,
      "type": null,
      "value": 0,
      "wage": 0,
    },
    {
      "acceleration": 70,
      "age": -1992,
      "baroudeur": 73,
      "cobble": 59,
      "contractEndYear": 2021,
      "country": "ITA",
      "downhilling": 68,
      "endurance": 66,
      "firstName": "Davide",
      "hill": 76,
      "id": 3361,
      "lastName": "Villella",
      "mediumMountain": null,
      "mountain": 72,
      "overall": null,
      "plain": 68,
      "prologue": 60,
      "recuperation": 69,
      "resistance": 65,
      "sprint": 65,
      "timeTrial": 58,
      "type": null,
      "value": 0,
      "wage": 0,
    },
  ],
  "teamId": 1,
}
`;

exports[`getTeamRoster > returns the roster for a given team for Pro cycling manager 2025 1`] = `
{
  "cyclists": [
    {
      "acceleration": 62,
      "age": -1993,
      "baroudeur": 64,
      "cobble": 67,
      "contractEndYear": 2025,
      "country": "ESP",
      "downhilling": 65,
      "endurance": 66,
      "firstName": "Jorge",
      "hill": 70,
      "id": 5630,
      "lastName": "Arcas",
      "mediumMountain": 68,
      "mountain": 64,
      "overall": 0,
      "plain": 71,
      "prologue": 71,
      "recuperation": 67,
      "resistance": 65,
      "sprint": 60,
      "timeTrial": 68,
      "type": null,
      "value": 0,
      "wage": 0,
    },
    {
      "acceleration": 75,
      "age": -1997,
      "baroudeur": 62,
      "cobble": 66,
      "contractEndYear": 2026,
      "country": "VEN",
      "downhilling": 71,
      "endurance": 70,
      "firstName": "Orluis",
      "hill": 76,
      "id": 7113,
      "lastName": "Aular",
      "mediumMountain": 72,
      "mountain": 69,
      "overall": 0,
      "plain": 70,
      "prologue": 69,
      "recuperation": 71,
      "resistance": 73,
      "sprint": 74,
      "timeTrial": 67,
      "type": null,
      "value": 0,
      "wage": 0,
    },
    {
      "acceleration": 71,
      "age": -2001,
      "baroudeur": 74,
      "cobble": 65,
      "contractEndYear": 2027,
      "country": "ESP",
      "downhilling": 70,
      "endurance": 71,
      "firstName": "Jon",
      "hill": 74,
      "id": 7442,
      "lastName": "Barrenetxea",
      "mediumMountain": 69,
      "mountain": 63,
      "overall": 0,
      "plain": 72,
      "prologue": 64,
      "recuperation": 68,
      "resistance": 71,
      "sprint": 70,
      "timeTrial": 64,
      "type": null,
      "value": 0,
      "wage": 0,
    },
    {
      "acceleration": 67,
      "age": -1997,
      "baroudeur": 72,
      "cobble": 65,
      "contractEndYear": 2025,
      "country": "USA",
      "downhilling": 68,
      "endurance": 69,
      "firstName": "William",
      "hill": 73,
      "id": 3932,
      "lastName": "Barta",
      "mediumMountain": 73,
      "mountain": 71,
      "overall": 0,
      "plain": 74,
      "prologue": 71,
      "recuperation": 74,
      "resistance": 66,
      "sprint": 61,
      "timeTrial": 73,
      "type": null,
      "value": 0,
      "wage": 0,
    },
    {
      "acceleration": 73,
      "age": -2002,
      "baroudeur": 71,
      "cobble": 70,
      "contractEndYear": 2027,
      "country": "ESP",
      "downhilling": 76,
      "endurance": 70,
      "firstName": "Carlos",
      "hill": 76,
      "id": 7161,
      "lastName": "Canal",
      "mediumMountain": 73,
      "mountain": 66,
      "overall": 0,
      "plain": 73,
      "prologue": 70,
      "recuperation": 67,
      "resistance": 73,
      "sprint": 71,
      "timeTrial": 68,
      "type": null,
      "value": 0,
      "wage": 0,
    },
    {
      "acceleration": 68,
      "age": -2002,
      "baroudeur": 74,
      "cobble": 69,
      "contractEndYear": 2027,
      "country": "ESP",
      "downhilling": 72,
      "endurance": 73,
      "firstName": "Pablo",
      "hill": 76,
      "id": 8291,
      "lastName": "Castrillo",
      "mediumMountain": 76,
      "mountain": 75,
      "overall": 0,
      "plain": 73,
      "prologue": 70,
      "recuperation": 72,
      "resistance": 70,
      "sprint": 60,
      "timeTrial": 71,
      "type": null,
      "value": 0,
      "wage": 0,
    },
    {
      "acceleration": 68,
      "age": -1997,
      "baroudeur": 72,
      "cobble": 60,
      "contractEndYear": 2026,
      "country": "ECU",
      "downhilling": 70,
      "endurance": 71,
      "firstName": "Jefferson Alveiro",
      "hill": 75,
      "id": 7118,
      "lastName": "Cepeda",
      "mediumMountain": 76,
      "mountain": 75,
      "overall": 0,
      "plain": 67,
      "prologue": 68,
      "recuperation": 71,
      "resistance": 69,
      "sprint": 62,
      "timeTrial": 67,
      "type": null,
      "value": 0,
      "wage": 0,
    },
    {
      "acceleration": 74,
      "age": -1990,
      "baroudeur": 66,
      "cobble": 67,
      "contractEndYear": 2025,
      "country": "ITA",
      "downhilling": 71,
      "endurance": 68,
      "firstName": "Davide",
      "hill": 69,
      "id": 1945,
      "lastName": "Cimolai",
      "mediumMountain": 63,
      "mountain": 59,
      "overall": 0,
      "plain": 72,
      "prologue": 65,
      "recuperation": 71,
      "resistance": 68,
      "sprint": 73,
      "timeTrial": 63,
      "type": null,
      "value": 0,
      "wage": 0,
    },
    {
      "acceleration": 69,
      "age": -1993,
      "baroudeur": 72,
      "cobble": 67,
      "contractEndYear": 2026,
      "country": "ITA",
      "downhilling": 74,
      "endurance": 71,
      "firstName": "Davide",
      "hill": 75,
      "id": 3363,
      "lastName": "Formolo",
      "mediumMountain": 74,
      "mountain": 72,
      "overall": 0,
      "plain": 70,
      "prologue": 67,
      "recuperation": 74,
      "resistance": 72,
      "sprint": 61,
      "timeTrial": 66,
      "type": null,
      "value": 0,
      "wage": 0,
    },
    {
      "acceleration": 72,
      "age": -1996,
      "baroudeur": 71,
      "cobble": 75,
      "contractEndYear": 2026,
      "country": "ESP",
      "downhilling": 70,
      "endurance": 71,
      "firstName": "Iván",
      "hill": 71,
      "id": 5106,
      "lastName": "García Cortina",
      "mediumMountain": 66,
      "mountain": 61,
      "overall": 0,
      "plain": 74,
      "prologue": 70,
      "recuperation": 72,
      "resistance": 70,
      "sprint": 73,
      "timeTrial": 66,
      "type": null,
      "value": 0,
      "wage": 0,
    },
    {
      "acceleration": 75,
      "age": -1995,
      "baroudeur": 64,
      "cobble": 70,
      "contractEndYear": 2025,
      "country": "COL",
      "downhilling": 78,
      "endurance": 70,
      "firstName": "Fernando",
      "hill": 67,
      "id": 5637,
      "lastName": "Gaviria",
      "mediumMountain": 64,
      "mountain": 59,
      "overall": 0,
      "plain": 71,
      "prologue": 68,
      "recuperation": 70,
      "resistance": 72,
      "sprint": 77,
      "timeTrial": 56,
      "type": null,
      "value": 0,
      "wage": 0,
    },
    {
      "acceleration": 72,
      "age": -1995,
      "baroudeur": 75,
      "cobble": 63,
      "contractEndYear": 2025,
      "country": "POR",
      "downhilling": 68,
      "endurance": 70,
      "firstName": "Ruben",
      "hill": 75,
      "id": 3925,
      "lastName": "Guerreiro",
      "mediumMountain": 75,
      "mountain": 73,
      "overall": 0,
      "plain": 68,
      "prologue": 66,
      "recuperation": 70,
      "resistance": 71,
      "sprint": 68,
      "timeTrial": 66,
      "type": null,
      "value": 0,
      "wage": 0,
    },
    {
      "acceleration": 60,
      "age": -2002,
      "baroudeur": 64,
      "cobble": 62,
      "contractEndYear": 2026,
      "country": "GER",
      "downhilling": 66,
      "endurance": 65,
      "firstName": "Michel",
      "hill": 70,
      "id": 8927,
      "lastName": "Hessmann",
      "mediumMountain": 70,
      "mountain": 66,
      "overall": 0,
      "plain": 70,
      "prologue": 65,
      "recuperation": 64,
      "resistance": 63,
      "sprint": 58,
      "timeTrial": 65,
      "type": null,
      "value": 0,
      "wage": 0,
    },
    {
      "acceleration": 72,
      "age": -1996,
      "baroudeur": 74,
      "cobble": 64,
      "contractEndYear": 2025,
      "country": "ESP",
      "downhilling": 69,
      "endurance": 76,
      "firstName": "Enric",
      "hill": 77,
      "id": 5955,
      "lastName": "Mas",
      "mediumMountain": 78,
      "mountain": 78,
      "overall": 0,
      "plain": 67,
      "prologue": 68,
      "recuperation": 76,
      "resistance": 72,
      "sprint": 62,
      "timeTrial": 69,
      "type": null,
      "value": 0,
      "wage": 0,
    },
    {
      "acceleration": 68,
      "age": -2003,
      "baroudeur": 59,
      "cobble": 66,
      "contractEndYear": 2026,
      "country": "ITA",
      "downhilling": 68,
      "endurance": 65,
      "firstName": "Lorenzo",
      "hill": 70,
      "id": 7693,
      "lastName": "Milesi",
      "mediumMountain": 68,
      "mountain": 65,
      "overall": 0,
      "plain": 72,
      "prologue": 72,
      "recuperation": 66,
      "resistance": 66,
      "sprint": 60,
      "timeTrial": 74,
      "type": null,
      "value": 0,
      "wage": 0,
    },
    {
      "acceleration": 62,
      "age": -2003,
      "baroudeur": 68,
      "cobble": 65,
      "contractEndYear": 2026,
      "country": "ITA",
      "downhilling": 66,
      "endurance": 60,
      "firstName": "Manlio",
      "hill": 62,
      "id": 8318,
      "lastName": "Moro",
      "mediumMountain": 58,
      "mountain": 55,
      "overall": 0,
      "plain": 66,
      "prologue": 68,
      "recuperation": 60,
      "resistance": 61,
      "sprint": 60,
      "timeTrial": 66,
      "type": null,
      "value": 0,
      "wage": 0,
    },
    {
      "acceleration": 70,
      "age": -1995,
      "baroudeur": 73,
      "cobble": 65,
      "contractEndYear": 2025,
      "country": "AUT",
      "downhilling": 74,
      "endurance": 67,
      "firstName": "Gregor",
      "hill": 75,
      "id": 3197,
      "lastName": "Mühlberger",
      "mediumMountain": 74,
      "mountain": 71,
      "overall": 0,
      "plain": 68,
      "prologue": 68,
      "recuperation": 67,
      "resistance": 69,
      "sprint": 66,
      "timeTrial": 65,
      "type": null,
      "value": 0,
      "wage": 0,
    },
    {
      "acceleration": 60,
      "age": -1998,
      "baroudeur": 70,
      "cobble": 72,
      "contractEndYear": 2026,
      "country": "DEN",
      "downhilling": 77,
      "endurance": 66,
      "firstName": "Mathias",
      "hill": 68,
      "id": 6584,
      "lastName": "Norsgaard",
      "mediumMountain": 65,
      "mountain": 61,
      "overall": 0,
      "plain": 72,
      "prologue": 73,
      "recuperation": 64,
      "resistance": 68,
      "sprint": 61,
      "timeTrial": 71,
      "type": null,
      "value": 0,
      "wage": 0,
    },
    {
      "acceleration": 65,
      "age": -1990,
      "baroudeur": 70,
      "cobble": 72,
      "contractEndYear": 2025,
      "country": "POR",
      "downhilling": 67,
      "endurance": 70,
      "firstName": "Nelson",
      "hill": 73,
      "id": 1975,
      "lastName": "Oliveira",
      "mediumMountain": 72,
      "mountain": 70,
      "overall": 0,
      "plain": 74,
      "prologue": 75,
      "recuperation": 68,
      "resistance": 69,
      "sprint": 58,
      "timeTrial": 76,
      "type": null,
      "value": 0,
      "wage": 0,
    },
    {
      "acceleration": 64,
      "age": -1992,
      "baroudeur": 63,
      "cobble": 57,
      "contractEndYear": 2025,
      "country": "ESP",
      "downhilling": 70,
      "endurance": 67,
      "firstName": "Antonio",
      "hill": 71,
      "id": 5631,
      "lastName": "Pedrero",
      "mediumMountain": 73,
      "mountain": 73,
      "overall": 0,
      "plain": 65,
      "prologue": 63,
      "recuperation": 68,
      "resistance": 65,
      "sprint": 59,
      "timeTrial": 64,
      "type": null,
      "value": 0,
      "wage": 0,
    },
    {
      "acceleration": 54,
      "age": -2005,
      "baroudeur": 59,
      "cobble": 52,
      "contractEndYear": 2027,
      "country": "COL",
      "downhilling": 68,
      "endurance": 62,
      "firstName": "Diego",
      "hill": 66,
      "id": 8678,
      "lastName": "Pescador",
      "mediumMountain": 68,
      "mountain": 69,
      "overall": 0,
      "plain": 64,
      "prologue": 57,
      "recuperation": 56,
      "resistance": 59,
      "sprint": 53,
      "timeTrial": 56,
      "type": null,
      "value": 0,
      "wage": 0,
    },
    {
      "acceleration": 68,
      "age": -1991,
      "baroudeur": 68,
      "cobble": 67,
      "contractEndYear": 2025,
      "country": "COL",
      "downhilling": 80,
      "endurance": 68,
      "firstName": "Nairo",
      "hill": 73,
      "id": 2046,
      "lastName": "Quintana",
      "mediumMountain": 73,
      "mountain": 74,
      "overall": 0,
      "plain": 67,
      "prologue": 64,
      "recuperation": 71,
      "resistance": 68,
      "sprint": 60,
      "timeTrial": 64,
      "type": null,
      "value": 0,
      "wage": 0,
    },
    {
      "acceleration": 63,
      "age": -2004,
      "baroudeur": 74,
      "cobble": 65,
      "contractEndYear": 2027,
      "country": "ESP",
      "downhilling": 72,
      "endurance": 73,
      "firstName": "Iván",
      "hill": 75,
      "id": 7767,
      "lastName": "Romeo",
      "mediumMountain": 74,
      "mountain": 70,
      "overall": 0,
      "plain": 76,
      "prologue": 76,
      "recuperation": 71,
      "resistance": 71,
      "sprint": 61,
      "timeTrial": 75,
      "type": null,
      "value": 0,
      "wage": 0,
    },
    {
      "acceleration": 66,
      "age": -2000,
      "baroudeur": 70,
      "cobble": 65,
      "contractEndYear": 2027,
      "country": "ESP",
      "downhilling": 68,
      "endurance": 71,
      "firstName": "Javier",
      "hill": 77,
      "id": 7397,
      "lastName": "Romo",
      "mediumMountain": 72,
      "mountain": 70,
      "overall": 0,
      "plain": 73,
      "prologue": 67,
      "recuperation": 68,
      "resistance": 70,
      "sprint": 58,
      "timeTrial": 68,
      "type": null,
      "value": 0,
      "wage": 0,
    },
    {
      "acceleration": 72,
      "age": -1999,
      "baroudeur": 73,
      "cobble": 59,
      "contractEndYear": 2026,
      "country": "COL",
      "downhilling": 73,
      "endurance": 74,
      "firstName": "Einer",
      "hill": 75,
      "id": 7064,
      "lastName": "Rubio",
      "mediumMountain": 77,
      "mountain": 78,
      "overall": 0,
      "plain": 66,
      "prologue": 64,
      "recuperation": 75,
      "resistance": 71,
      "sprint": 60,
      "timeTrial": 65,
      "type": null,
      "value": 0,
      "wage": 0,
    },
    {
      "acceleration": 72,
      "age": -1995,
      "baroudeur": 75,
      "cobble": 71,
      "contractEndYear": 2026,
      "country": "ESP",
      "downhilling": 70,
      "endurance": 68,
      "firstName": "Gonzalo",
      "hill": 72,
      "id": 6407,
      "lastName": "Serrano",
      "mediumMountain": 69,
      "mountain": 68,
      "overall": 0,
      "plain": 71,
      "prologue": 65,
      "recuperation": 68,
      "resistance": 71,
      "sprint": 68,
      "timeTrial": 65,
      "type": null,
      "value": 0,
      "wage": 0,
    },
    {
      "acceleration": 71,
      "age": -2001,
      "baroudeur": 61,
      "cobble": 61,
      "contractEndYear": 2027,
      "country": "ESP",
      "downhilling": 70,
      "endurance": 71,
      "firstName": "Pelayo",
      "hill": 75,
      "id": 7420,
      "lastName": "Sánchez",
      "mediumMountain": 75,
      "mountain": 72,
      "overall": 0,
      "plain": 69,
      "prologue": 67,
      "recuperation": 73,
      "resistance": 73,
      "sprint": 69,
      "timeTrial": 66,
      "type": null,
      "value": 0,
      "wage": 0,
    },
    {
      "acceleration": 70,
      "age": -2000,
      "baroudeur": 71,
      "cobble": 60,
      "contractEndYear": 2026,
      "country": "ERI",
      "downhilling": 67,
      "endurance": 68,
      "firstName": "Natnael",
      "hill": 75,
      "id": 7372,
      "lastName": "Tesfatsion",
      "mediumMountain": 74,
      "mountain": 73,
      "overall": 0,
      "plain": 67,
      "prologue": 59,
      "recuperation": 67,
      "resistance": 70,
      "sprint": 69,
      "timeTrial": 59,
      "type": null,
      "value": 0,
      "wage": 0,
    },
    {
      "acceleration": 69,
      "age": -1991,
      "baroudeur": 61,
      "cobble": 64,
      "contractEndYear": null,
      "country": "ESP",
      "downhilling": 69,
      "endurance": 65,
      "firstName": "Albert",
      "hill": 66,
      "id": 5844,
      "lastName": "Torres",
      "mediumMountain": 62,
      "mountain": 57,
      "overall": 0,
      "plain": 70,
      "prologue": 68,
      "recuperation": 68,
      "resistance": 66,
      "sprint": 69,
      "timeTrial": 61,
      "type": null,
      "value": 0,
      "wage": null,
    },
  ],
  "teamId": 1,
}
`;
